--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "nelmio/cors-bundle": "^2.2",
+        "predis/predis": "^1.1",
         "snc/redis-bundle": "^4.3",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
