--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.13",
         "nelmio/cors-bundle": "^2.2",
         "predis/predis": "^1.1",
+        "ramsey/uuid-doctrine": "^1.8",
         "snc/redis-bundle": "^4.3",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
