--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "jms/serializer-bundle": "^4.0",
         "nelmio/cors-bundle": "^2.2",
         "predis/predis": "^1.1",
         "ramsey/uuid-doctrine": "^1.8",
